[package]
name = "rpython"
version = "0.1.0"
edition = "2024"

[dependencies]
ruff_python_ast = { git = "https://github.com/astral-sh/ruff", package = "ruff_python_ast", branch = "main" }
ruff_python_parser = { git = "https://github.com/astral-sh/ruff", package = "ruff_python_parser", branch = "main" }
