[package]
name = "rpython"
version = "0.1.0"
edition = "2024"

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
panic = "abort"
strip = true

[dependencies]
ruff_python_ast = { git = "https://github.com/astral-sh/ruff", package = "ruff_python_ast", branch = "main" }
ruff_python_parser = { git = "https://github.com/astral-sh/ruff", package = "ruff_python_parser", branch = "main" }

indexmap = "2.0"
